fix span tooltip alignment

--- a/assets/stylus/partials/elements.styl
+++ b/assets/stylus/partials/elements.styl
@@ -271,7 +271,7 @@ a
         position absolute
         top 100%
         left 50%
-        margin-left -8px
+        margin-left -4px
         width 0
         height 0
         border-top 8px solid #333333
